# language-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
language_detection/: batch_request.py  bentofile.yaml  configuration.yaml  detect_script.py  fasttext_runner.py  indic_mapping.py  service.py  test_model.py
language_detection/lit/: configuration.yaml  fasttext_runner.py  service.py
language_detection/utils/: path_helpers.py
notebooks/: load_models.py
tests/language_detection/: test_detect_script.py
tests/lit/: test_detect_script.py
